--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,11 @@
     <name>Text Punctuation Analyzer</name>
     <modules>
         <module>tpa-core</module>
+        <module>tpa-polish-lang</module>
     </modules>
 
     <properties>
-        <kotlin.version>1.3.61</kotlin.version>
+        <kotlin.version>1.3.71</kotlin.version>
     </properties>
 
     <dependencies>
