--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,11 @@
     <modules>
         <module>tpa-core</module>
         <module>tpa-polish-lang</module>
+        <module>tpa-utils</module>
     </modules>
 
     <properties>
-        <kotlin.version>1.3.71</kotlin.version>
+        <kotlin.version>1.3.72</kotlin.version>
     </properties>
 
     <dependencies>
