Connect JPL into main.kt

--- a/tpa-utils/tpa-jpl/pom.xml
+++ b/tpa-utils/tpa-jpl/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>tpa-jpl</artifactId>
 
     <properties>
-        <jpl.path>/dev/null</jpl.path>
+        <jpl.path>/usr/lib/swi-prolog/lib/jpl.jar</jpl.path>
     </properties>
 
     <dependencies>
