--- a/tpa-polish-lang/pom.xml
+++ b/tpa-polish-lang/pom.xml
@@ -16,7 +16,10 @@
         <dependency>
             <groupId>net.wojteksz128</groupId>
             <artifactId>tpa-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>net.wojteksz128</groupId>
+            <artifactId>tpa-jpl</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
