Add morfeusz interface as tpa library

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>tpa-core</module>
         <module>tpa-polish-lang</module>
+        <module>tpa-utils</module>
     </modules>
 
     <properties>
