--- a/tpa-utils/tpa-morfeusz/pom.xml
+++ b/tpa-utils/tpa-morfeusz/pom.xml
@@ -23,5 +23,10 @@
             <scope>system</scope>
             <systemPath>${morfeusz.path}</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
