Extract finding the statement groups into separate module.

--- a/tpa-core/pom.xml
+++ b/tpa-core/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+        </dependency>
     </dependencies>
 
 
