Move preparing text part interpretation into separate module

--- a/tpa-utils/tpa-morfeusz/pom.xml
+++ b/tpa-utils/tpa-morfeusz/pom.xml
@@ -34,5 +34,10 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.wojteksz128</groupId>
+            <artifactId>tpa-dag</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
