--- a/tpa-core/pom.xml
+++ b/tpa-core/pom.xml
@@ -22,6 +22,12 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.wojteksz128</groupId>
+            <artifactId>tpa-dag</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
