--- a/tpa-utils/tpa-dag/pom.xml
+++ b/tpa-utils/tpa-dag/pom.xml
@@ -3,19 +3,12 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>text-punctuation-analyzer</artifactId>
+        <artifactId>tpa-utils</artifactId>
         <groupId>net.wojteksz128</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>tpa-utils</artifactId>
-    <packaging>pom</packaging>
-    <name>Text Punctuation Analyzer &gt; Utils</name>
-    <modules>
-        <module>tpa-morfeusz</module>
-        <module>tpa-dag</module>
-    </modules>
-
-
+    <artifactId>tpa-dag</artifactId>
+    <name>Text Punctuation Analyzer &gt; Utils &gt; DAG</name>
 </project>
