Concraft Server used to calculate probability of words in text

--- a/tpa-utils/pom.xml
+++ b/tpa-utils/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>tpa-morfeusz</module>
         <module>tpa-dag</module>
+        <module>tpa-concraft</module>
     </modules>
 
 
