--- a/tpa-polish-lang/pom.xml
+++ b/tpa-polish-lang/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>klaxon</artifactId>
             <version>5.4</version>
         </dependency>
+        <dependency>
+            <groupId>net.wojteksz128</groupId>
+            <artifactId>tpa-concraft</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
