--- a/tpa-utils/tpa-concraft/pom.xml
+++ b/tpa-utils/tpa-concraft/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>converter-gson</artifactId>
             <version>${retrofit.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.wojteksz128</groupId>
+            <artifactId>tpa-morfeusz</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
