--- a/tpa-utils/tpa-morfeusz/pom.xml
+++ b/tpa-utils/tpa-morfeusz/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
+        </dependency>
         <dependency>
             <groupId>net.wojteksz128</groupId>
             <artifactId>tpa-dag</artifactId>
