Extract console application to separate Maven module

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>tpa-core</module>
         <module>tpa-polish-lang</module>
         <module>tpa-utils</module>
+        <module>tpa-polish-lang-test</module>
     </modules>
 
     <properties>
